# zup

./: .editorconfig  .gitignore  .nvim.lua  CMakeLists.txt  fib  flake.nix  justfile  run-tests.sh
examples/: 001.zup  001_hello_world.zup  002.zup  002_fibonacci.zup  003.zup  003_fibonacci_for.zup  003_fizzbuzz.zup  004.zup  004_fizzbuzz.zup  005.zup  005_rect.zup  006_sum.zup  007_args.zup  008.zup  008_input.zup  009_quine.zup  010_flags.zup  input.zup
include/: arena.h  ast.h  codegen.h  compiler.h  debug.h  diag.h  loader.h  parser.h  semantic.h  token.h  utils.h
src/: arena.c  ast.c  ast.zup  codegen.c  codegen.zup  compiler.c  compiler.zup  diag.c  lexer.c  lexer.zup  loader.c  loader.zup  main.c  main.zup  parser.c  parser.zup  semantic.c  token.c  utils.c
stage0/: CMakeLists.txt  arena.c  codegen.c  compiler.c  debug.c  diag.c  loader.c  parser.c  semantic.c  utils.c
stage0/include/: arena.h  compiler.h  diag.h  lexer.h  semantic.h  token.h
stage1/: justfile
stage1/src/: ast.zup  compiler.zup  diag.zup  lexer.zup  loader.zup  main.zup  parser.zup  sema.zup  source.zup  token.zup  utils.zup
std/: flag.zup  std.zup
std/ascii/: ascii.zup
std/io/: io.zup  sys.zup
std/mem/: mem.zup
tests/codegen/: and.zupt  arith_add.zupt  arith_div.zupt  arith_operand_order.zupt  arith_precedence.zupt  arith_rem.zupt  array_param.zupt  array_return.zupt  array_value.zupt  bitwise_shr.zupt  bool_literal.zupt  bool_param.zupt  break.zupt  cabi_struct_classes.zupt  cast_float_int.zupt  cast_float_narrow.zupt  cast_float_uint.zupt  cast_float_widen.zupt  cmp_eq.zupt  (+74 more)
(+475 files in other folders)
